# News2ETF-Agent

./: config.toml  justfile  main.py  pyproject.toml
config/: etf_map.json
config/prompts/: researcher.md  tool_descriptions.md  trader.md
docs/: plan.md
scripts/: export_all_setfit_onnx.sh  extract_last_two_years.py  test_setfit_onnx.py
src/: __init__.py  config.py
src/agent/: client.py  prompts.py  single_agent.py  state.py  tools.py  workflow.py
src/backtest/: engine.py  metrics.py  portfolio.py
src/signals/: knowledge_retrieval.py  models.py  raw_scorer.py  weekly_returns.py
src/utils/: industry_map.py
trainer/: __init__.py  config.py  config.toml  main.py  predict.bak  predict.py  wandb_handler.py
trainer/finbert/: __init__.py  dataset.py  model.py  predict.py  train.py
trainer/setfit/: __init__.py  model.py  train.py
trainer/setfit_module/: model.py  train.py
trainer/signals/: __init__.py  dataset.py  models.py  train.py
