[project]
name = "News2ETF-Agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=1.26.4,<2.0",
    "polars>=1.39.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.2",
    "typer>=0.24.1",
    "loguru>=0.7.3",
    "toml>=0.10.2",
    "langgraph>=1.1.3",
    "openai>=2.29.0",
    "lightgbm>=4.6.0",
    "scikit-learn>=1.8.0",
    "wandb>=0.25.1",
    "transformers==4.44.0",
    "datasets>=4.8.3",
]


[dependency-groups]
dev = ["ruff>=0.15.5", "uv>=0.10.12"]
trainer = [
    "onnx>=1.20.0",
    "skl2onnx>=1.20.0",
    "onnxmltools>=1.16.0",
    "ml_dtypes>=0.5.0",
]
torch_cpu = ["torch==2.4.0+cpu", "onnxruntime==1.19.0"]
torch_gpu = ["torch==2.4.0", "setfit>=1.1.3", "onnxruntime-gpu>=1.19.0"]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
conflicts = [[{ group = "torch_cpu" }, { group = "torch_gpu" }]]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", group = "torch_cpu" },
    { index = "pytorch-gpu", group = "torch_gpu" },
]
torchvision = [
    { index = "pytorch-cpu", group = "torch_cpu" },
    { index = "pytorch-gpu", group = "torch_gpu" },
]

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # https://docs.astral.sh/ruff/rules/#error-e
    "F",  # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",  # https://docs.astral.sh/ruff/rules/#isort-i
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
]
ignore = ["F401"]

[tool.pyright]
exclude = [ #
    ".git",
    "**/__pycache__",
    ".cache",
    ".idea",
    ".vscode",
    ".venv",
    ".devbox",
    "db/",
    "data/",
    "temp/",
    "logs/",
    "vendor/",
    "output/",
    "**/node_modules",
    "**/.*",
    "alembic/versions/*_auto.py",
]
